Fix compilation error for java 8